[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 8 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 6.0

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 0
script = ExtResource( 1 )

[node name="Rect" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )
disabled = true

[node name="Cap" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="Body" type="Node2D" parent="."]
editor/display_folded = true

[node name="ColorRect" type="ColorRect" parent="Body"]
margin_left = -5.0
margin_top = -16.0
margin_right = 5.0

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -32 )
current = true

[node name="Rays" type="Node2D" parent="."]

[node name="GroundCheck" type="RayCast2D" parent="Rays"]
position = Vector2( 0, -1 )
enabled = true
cast_to = Vector2( 0, 3 )

[node name="SlopeCheck1" type="RayCast2D" parent="Rays"]
position = Vector2( 5, -4 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="SlopeCheck2" type="RayCast2D" parent="Rays"]
position = Vector2( -5, -4 )
enabled = true
cast_to = Vector2( 0, 5 )
